# creator-outreach-core

./: README.md  pyproject.toml
src/creator_outreach_core/: __init__.py  db.py  events.py  importers.py  models.py  schema.sql  scoring.py  suppression.py
tests/: test_db.py  test_events.py  test_importers.py  test_integration.py  test_models.py  test_scoring.py  test_suppression.py
